fix wraper
сорі за незручності

--- a/src/sass/components/_room-for-two.scss
+++ b/src/sass/components/_room-for-two.scss
@@ -275,7 +275,7 @@
 }
 }
 
-.swiper-wrapper {
+.swiper-wrapper-r42 {
     display: flex;
         margin-left: -120px;
 
